--- a/frontend/stylesheets/chart.css.scss
+++ b/frontend/stylesheets/chart.css.scss
@@ -951,6 +951,13 @@
             display: flex;
           }
 
+          &.highlight{
+            td{
+              background: #D6F5FF;
+              display: flex;
+            }
+          }
+
           &.omitted {
             cursor: pointer;
             td {
@@ -968,8 +975,8 @@
               }
             }          
           }
-        }
 
+        }
 
         &.active{
           td{
@@ -978,6 +985,7 @@
             display: flex;
           }
         }
+
       }
 
       &.simple-mode-table{
@@ -986,9 +994,13 @@
             cursor: initial;
           }
 
+          td{
+            cursor: default;
+          }
+
           td.target-cell{
             padding: 5px 3px;
-
+            cursor: initial;
             &.assigned{
               cursor: pointer;
               &.omitted{
@@ -997,12 +1009,45 @@
               }
             }
 
+            &.selected{
+              & > span > span {
+                font-family: 'DINOT--Medium', Arial, sans-serif;
+              }
+            }
+
             & > span{
               padding: 2px 7px;
               border-radius: 2px;
+              border-style: inset;
               border: 0px solid transparent;
-              width: 70px;
+              min-width: 55px;
+              height: 24px;
               text-align: center;
+            }
+          }
+
+          &.highlight{
+            td{
+              background: #b5edfe;
+              color: #000;
+              &.target-cell.assigned{
+                padding: 4px 3px;
+                & > span{
+                  background: #fff;
+                  border: 1px solid transparent;
+                  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
+                  padding: 1px 7px;
+                }
+
+                &.selected{
+                  & > span{
+                    background: #fff;
+                    border: 2px solid transparent;
+                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
+                    padding: 1px 7px;
+                  }
+                }
+              }
             }
           }
 
@@ -1016,10 +1061,20 @@
                   background: #fff;
                   border: 1px solid transparent;
                   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
+                  padding: 1px 7px;
                 }
+                &.selected{
+                  & > span{
+                    background: #fff;
+                    border: 2px solid transparent;
+                    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.6);
+                    padding: 1px 7px;
+                  }
+                }                
               }
             }
           }          
+          
         }
       }
     }
