--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -68,6 +68,10 @@
         padding: 4px 20px;
       }
 
+      .detail-container{
+        height: 58px;
+        padding: 4px 8px;        
+      }
     }
 
     .well-switch-bar-container {
@@ -103,6 +107,48 @@
       flex-direction: column;
       justify-content: space-between;
       height: calc(100% - 20px)
+    }
+
+    .detail-container{
+      border-top: 1px solid #c5c5c5;
+      padding: 2px 5px;
+
+      min-height: 45px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: calc(100% - 20px);
+
+      .sample-name{
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        color: #000;
+        font-weight: initial;
+        height: 16px;
+        flex: 0 0 16px;
+      }
+
+      .well-type-box{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        img, label{
+          width: 24px;
+          height: 24px;
+        }
+        label{
+          border-radius: 50%;
+          margin: 0;
+          padding: 0;
+          border: 1px solid #c5c5c5;
+        }
+        .well-delimiter{
+          height: 16px;
+          width: 2px;
+          background: #c5c5c5;
+        }
+      }
     }
   }
 }
