--- a/frontend/stylesheets/chai-template/pika-test/set-wells.scss
+++ b/frontend/stylesheets/chai-template/pika-test/set-wells.scss
@@ -2,10 +2,11 @@
 
 .chai-mode{
   .pika-wrapper{
-    height: calc(100vh - 40px);
+    height: 100%;
     position: relative;
     margin: 0 !important;
     padding: 0 !important;
+    padding-bottom: 40px !important;
 
     header.exp-header{
       height: 80px;
